--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,17 +1,6 @@
 {
-  "PAGES": {
-    "HOME": {
-      "TITLE": "App works !",
-      "GO_TO_DETAIL": "Go to Detail"
-    },
-    "DETAIL": {
-      "TITLE": "Detail page !",
-      "BACK_TO_HOME": "Back to Home"
-    }
-  },
-  "ICON":{
-    "ADD": "Add",
-    "DOWN": "Down",
-    "CLEAN": "Clean"
-  }
+  "ADD": "Add",
+  "DOWN": "Down",
+  "CLEAN": "Clean",
+  "about": "About"
 }
