--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -7,5 +7,8 @@
   "clean": "Clean",
   "about": "About",
   "defaultOutdir": "outdir",
-  "quality": "Quality"
+  "quality": "Quality",
+  "error": "Error",
+  "await": "Await",
+  "finish": "Finish"
 }
