chore: openFileDir 在资源管理器中显示

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -3,6 +3,7 @@
   "save": "Save",
   "saveOverwrite": "Save and overwrite",
   "savenewdir": "Export to new folder",
+  "openFileDir": "Displays in the Explorer",
   "down": "Down",
   "clean": "Clean",
   "about": "About",
