docs: electron-builder 打包时 sharp

--- a/docs/插件依赖.md
+++ b/docs/插件依赖.md
@@ -1,3 +1,15 @@
-# 图片程序 c++源码打包
+# 图片程序
 
-[cmake-backUp](https://github.com/AlanSean/cmake-backUp): 记录了c++源码 利用docker交叉编译
+[sharp](https://github.com/lovell/sharp/issues?q=electron): 各种图形压缩编辑功能
+
+
+## electron-builder 打包时 sharp  无法打包进app.asar 的问题
+
+```
+https://github.com/electron-userland/electron-builder/issues/5438
+package.json
+
+"resolutions": {
+    "electron-builder/**/app-builder-bin": "3.5.13"
+  },
+```
