styles: 改一下结构

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -16,7 +16,7 @@
   "finish": "Finish",
   "remove": "remove",
   "msg": {
-    "finish": "Export the finish"
+    "export_finish": "Export the finish"
   },
   "menu": {
     "file": "File",
