chore: 新增提示信息

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -16,7 +16,10 @@
   "finish": "Finish",
   "remove": "remove",
   "msg": {
-    "export_finish": "Export the finish"
+    "export_finish": "Export the finish",
+    "save_finish": "Save the finish",
+    "save_loading": "In the save...",
+    "export_loading": "In the export..."
   },
   "menu": {
     "file": "File",
