chore: 添加文件夹下找不到图片的提示

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -19,7 +19,8 @@
     "export_finish": "Export the finish",
     "save_finish": "Save the finish",
     "save_loading": "In the save...",
-    "export_loading": "In the export..."
+    "export_loading": "In the export...",
+    "not_img_warning": "No pictures found in folder ～"
   },
   "menu": {
     "file": "File",
