--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -19,7 +19,8 @@
     "export_finish": "导出完成",
     "save_finish": "保存完成",
     "save_loading": "保存中...",
-    "export_loading": "导出中..."
+    "export_loading": "导出中...",
+    "not_img_warning": "文件夹下找到没有图片～"
   },
   "menu": {
     "file": "文件",
