--- a/src/renderer/assets/i18n/zh-CN.json
+++ b/src/renderer/assets/i18n/zh-CN.json
@@ -7,7 +7,7 @@
   "openFileDir": "在资源管理器中显示",
   "down": "下载",
   "clean": "清空",
-  "about": "关于产品",
+  "about": "关于",
   "defaultOutdir": "输出目录",
   "quality": "质量",
   "setting": "设置",
